[tool.poetry]
name = "gucker"
version = "0.1.0"
description = ""
authors = ["jhnnsrs <jhnnsrs@gmail.com>"]
license = "CC BY-NC 3.0"
packages = [{include = "gucker"}]

[tool.poetry.dependencies]
python = "^3.8"
arkitekt = "^0.1.112"
mikro = "^0.1.67"
PyQt5 = "^5.15.6"
tifffile = "^2021.11.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^3.0.0"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
